# cachey

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: cache.rs  lib.rs  types.rs
src/object_store/: config.rs  downloader.rs  mod.rs  profile.rs  stats.rs
src/service/: metrics.rs  mod.rs  routes.rs  throughput.rs
tests/: downloader_integration_test.rs  server_integration_test.rs
tests/common/: mod.rs
