[package]
name = "cachey"
version = "0.6.2"
edition = "2024"
authors = ["s2 team <hi@s2.dev>"]
license = "MIT"
repository = "https://github.com/s2-streamstore/cachey"

[dependencies]
async-stream = "0.3"
aws-config = "1.8"
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "sigv4a",
    "rt-tokio",
    "default-https-client",
] }
aws-smithy-runtime-api = "1.9"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
bytes = "1.11"
bytesize = "2.3"
clap = { version = "4.5", features = ["derive"] }
compact_str = { version = "0.9", features = ["serde"] }
crossbeam = "0.8"
dashmap = "6.1"
exponential-decay-histogram = "0.1"
eyre = "0.6"
foyer = "0.21"
futures = "0.3"
http = "1.4"
http-body = "1.0"
http-body-util = "0.1"
http-content-range = "0.2"
http-range-header = "0.4.2"
httpdate = "1.0"
itertools = "0.14"
mimalloc = { version = "0.1.48", default-features = false }
mixtrics = { version = "0.2", features = ["prometheus_0_14"] }
parking_lot = "0.12"
pin-project-lite = "0.2"
prometheus = { version = "0.14", features = ["process"] }
rcgen = "0.14"
serde = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "test-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1.9"
reqwest = { version = "0.12", features = ["json"] }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["minio"] }

[lints.clippy]
wildcard_imports = "warn"
enum_glob_use = "warn"

[lints.rust]
unsafe_code = "warn"
